Add core structure to home page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>skriver lite text här</h1>
-    
+    <header> header content </header>
+    <section>
+        main image
+    </section>
+    <section>
+        club Ethos
+    </section>
+    <section>
+        Runing locations distance 
+    </section>
+    <footer>
+        social links
+    </footer>
 </body>
 </html>
