--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dubling Ireland">
-    <meta name="keywords" content=" Love Runing, running, club, ireland, dublin" <link rel="stylesheet"
+    <meta name="keywords" content=" Love Runing, running, club, ireland, dublin">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
