--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Love Running</h1>
+            <h1 id="logo">Love Running</h1>
         </a>
         <nav>
-            <ul>
-                <li><a href="index.htmlhtml">Home</a></li>
+            <ul id="menu">
+                <li><a href="index.htmlhtml" class="aktive">Home</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Sign Up </a></li>
 
