--- a/index.html
+++ b/index.html
@@ -125,7 +125,18 @@
         </div>
     </section>
     <footer>
-        social links here
+        <ul>
+            <li><a href="https://facebook.com" target="blank" rel="noopen" aria-label="Visit our facebook page (open in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+        <ul>
+            <li><a href="https://twitter.com" target="blank" rel="noopen" aria-label="Visit our twitter page (open in a new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
+        </ul>
+        <ul>
+            <li><a href="https://youtube.com" target="blank" rel="noopen" aria-label="Visit our youtube page (open in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+        </ul>
+        <ul>
+            <li><a href="https://instagram.com" target="blank" rel="noopen" aria-label="Visit our instagram page (open in a new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
+        </ul>
     </footer>
     <!-- font awsome spript -->
     <script src="https://kit.fontawesome.com/eca297c6d5.js" crossorigin="anonymous"></script>
