--- a/index.html
+++ b/index.html
@@ -125,19 +125,26 @@
         </div>
     </section>
     <footer>
-        <ul>
-            <li><a href="https://facebook.com" target="blank" rel="noopen" aria-label="Visit our facebook page (open in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-        </ul>
-        <ul>
-            <li><a href="https://twitter.com" target="blank" rel="noopen" aria-label="Visit our twitter page (open in a new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
-        </ul>
-        <ul>
-            <li><a href="https://youtube.com" target="blank" rel="noopen" aria-label="Visit our youtube page (open in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
-        </ul>
-        <ul>
-            <li><a href="https://instagram.com" target="blank" rel="noopen" aria-label="Visit our instagram page (open in a new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
         </ul>
     </footer>
+    
     <!-- font awsome spript -->
     <script src="https://kit.fontawesome.com/eca297c6d5.js" crossorigin="anonymous"></script>
 </body>
